Add profiler, interpreter is 25x (!) slower after adding namespaces